bug 671385 - restore the recursive application of ForEachFontInternal to font names from preferences, to avoid breaking Fontconfig generics. r=jdaggett